simple-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-pod
  labels:
    my-label-name: my-label-value
spec:
  containers:
    - name: my-container
      image: httpd
