mboard-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mboard-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: mboard-api
  template:
    metadata:
      labels:
        component: mboard-api
    spec:
      imagePullSecrets:
        - name: docker-token-secret
      containers:
        - name: mboard-api-container
          image: johnnyb61820/k8s-example-api:1.0.1
          ports:
            - containerPort: 4567
---
apiVersion: v1
kind: Service
metadata:
  name: mboard-api-service
spec:
  selector:
    component: mboard-api
  ports:
    - port: 4567
