memcache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: memcache
  template:
    metadata:
      labels:
        component: memcache
    spec:
      containers:
        - name: memcache
          image: memcached:1.6
          ports:
            - containerPort: 11211
---
apiVersion: v1
kind: Service
metadata:
  name: memcache-service
spec:
  selector:
    component: memcache
  ports:
    - port: 11211
