my-service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: my-file-service
spec:
  selector:
    my-label-name: my-label-value
  ports:
    - protocol: TCP 
      port: 80
      targetPort: 8070
  type: LoadBalancer
